init.d/vz*: unset io limits before stopping CT
In addition to removing cpulimit just before stopping a container,
now it also makes sense to remove its io and iops limits.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -370,8 +370,8 @@ stop_ves()
 			for veid in $velist; do
 				echo $msg $veid
 				if [ "$stage" = "stop" ]; then
-					# Unset cpulimit for CT to stop fast
-					$VZCTL set $veid --cpulimit 0 >/dev/null 2>&1
+					# Unset limits for CT to stop fast
+					$VZCTL set $veid --cpulimit 0 --iolimit 0 --iopslimit 0 >/dev/null 2>&1
 				fi
 				$VZCTL --skiplock $stage $veid >/dev/null 2>&1 &
 				pids="$pids $!"
