vzctl(8): document MAX_VEID
https://bugzilla.openvz.org/2784

Reported-by: Pavel Odintsov <pavel.odintsov@gmail.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -80,7 +80,8 @@ or HN) and performs direct manipulations with containers (CTs).
 .PP
 Containers can be referred to by either numeric \fICTID\fR or
 by name (see \fB--name\fR option). Note that CT ID <= 100 are reserved for
-OpenVZ internal purposes.
+OpenVZ internal purposes. A numeric ID should not be more than
+\fB2147483644\fR.
 .SH OPTIONS
 
 .SS Flags
