bash-completion: CTIDs on ploop for compact
For vzctl compact, it only makes sense to show CTIDs of
containers on ploop.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -40,7 +40,7 @@ _get_ves()
 				grep '^simfs ' | \
 				sed 's/^simfs *//' | $rm_empty
 			;;
-		snapshot*)
+		compact|snapshot*)
 			# CTs on ploop
 			(@SBINDIR@/vzlist -H -a -o layout,ctid;
 			 @SBINDIR@/vzlist -H -a -o layout,name) 2>/dev/null | \
