vzubc: fix to work in old mawk
Debian ships mawk by default, and even in Debian Wheezy mawk
version is pretty old (1.3.3 Nov 1996). This is probably the
reason why it doesn't support POSIX bracket expression
(a.k.a. character classes) in regular expressions.

Fix is simple: replace [:space:] with an actual space and a tab.

https://bugzilla.openvz.org/2793
http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=728071

Reported-by: Marco d'Itri <md@linux.it>
Reported-by: Ola Lundqvist <ola@inguza.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzubc.in
+++ b/bin/vzubc.in
@@ -281,14 +281,14 @@ BEGIN {
 	}
 	next
 }
-/^[[:space:]]*uid / {
+/^[	 ]*uid / {
 	next
 }
-/^[[:space:]]*dummy/ {
+/^[	 ]*dummy/ {
 	id=""
 	next
 }
-/^[[:space:]]*[0-9]+:/ {
+/^[	 ]*[0-9]+:/ {
 	header=""
 	bcid=int($1)
 	if ((CTIDS !~ /^[ ]*$/) && (CTIDS !~ " " bcid " ")) {
@@ -306,7 +306,7 @@ BEGIN {
 	limit=$6
 	failcnt=$7
 }
-/^[[:space:]]*[a-z]+/ {
+/^[	 ]*[a-z]+/ {
 	id=$1
 	held=$2
 	maxheld=$3
