--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -7,7 +7,7 @@ _get_ves()
 	local cmd=$1
 	local rm_empty='sed s/^-[[:space:]]*//'
 	# Only allow this completion when user has root privileges
-	[ "$EUID" -ne 0 ] && exit 1
+	[ "$EUID" -ne 0 ] && return 1
 	case $cmd in
 		create)
 			# create a new CTID, by increasing the last one
@@ -220,7 +220,7 @@ _vzctl()
 			--ipdel)
 				# Only allow this completion
 				# when user has root privileges
-				[ "$EUID" -ne 0 ] && exit 1
+				[ "$EUID" -ne 0 ] && return 1
 				# Get CTID
 				local cmd=${COMP_WORDS[1]}
 				local ve=${COMP_WORDS[2]}
@@ -260,7 +260,7 @@ _vzctl()
 			--id|--uuid)
 				# Only allow this completion
 				# when user has root privileges
-				[ "$EUID" -ne 0 ] && exit 1
+				[ "$EUID" -ne 0 ] && return 1
 				# Get command and CTID
 				local cmd=${COMP_WORDS[1]}
 				local ve=${COMP_WORDS[2]}
@@ -283,7 +283,7 @@ _vzctl()
 					# Do not give anything for other cmds
 					# including 'snapshot' itself
 					# since it requires a new unused ID
-					exit 0
+					return 0
 					;;
 				esac
 				COMPREPLY=( $( compgen -W "$ids" -- $cur ) )
