bash_completion.d: add --quiet to vzctl
When completing snapshot IDs for snapshot-switch etc, vzctl needs to
be quiet, i.e. output nothing but the snapshot IDs. In case VERBOSE
is set to high value in /etc/vz/vz.conf it might not be the case:

[root@ce6 vzctl]# vzctl snapshot-list 110 -H -ouuid
The ploop library has been loaded successfully
{625f9ea2-9e8d-43be-ab46-de50344b8968}
....

Which leads to this funny effect:

[root@ce6 vzctl]# vzctl snapshot-switch 110 --id
03f09a21-ae49-4a33-ade9-aa89909d0777
ee95e935-3b6a-444d-9da3-0a72f19d151b
37f0b846-4735-428a-882b-20648e381109  has
47d7de0c-50ca-4768-be15-2f3b7e727c04  library
625f9ea2-9e8d-43be-ab46-de50344b8968  loaded
727ad2db-d08b-4a6b-8e12-83cd7d99ed24  ploop
9bec9072-7dcd-4fd1-a59d-334082513f89  successfully
been                                  The

Fix by adding --quiet to vzctl snapshot-list invocations.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -273,11 +273,11 @@ _vzctl()
 				case ${cmd} in
 				    snapshot-umount)
 					# For umount, only give mounted IDs
-					ids="`@SBINDIR@/vzctl snapshot-list $ve -H -ouuid,device 2>/dev/null | awk 'NF==2 {print $1}' | tr -d '{}'`"
+					ids="`@SBINDIR@/vzctl --quiet snapshot-list $ve -H -ouuid,device 2>/dev/null | awk 'NF==2 {print $1}' | tr -d '{}'`"
 					;;
 				    snapshot-*)
 					# For other commands, give all IDs
-					ids="`@SBINDIR@/vzctl snapshot-list $ve -H -ouuid 2>/dev/null | tr -d '{}'`"
+					ids="`@SBINDIR@/vzctl --quiet snapshot-list $ve -H -ouuid 2>/dev/null | tr -d '{}'`"
 					;;
 				    *)
 					# Do not give anything for other cmds
