vz.conf: add SKIP_ARPDETECT example
etc/vz.conf: add (commented out) SKIP_ARPDETECT with a short explanation
etc/vz.conf: improve ERROR_ON_ARPFAIL description in vz.conf
man/vz.conf(5): add SKIP_ARPDETECT, improve ERROR_ON_ARPFAIL description

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/vz.conf.in
+++ b/etc/vz.conf.in
@@ -27,7 +27,11 @@ VZFASTBOOT=no
 # Leave commented out to use all interfaces.
 #NEIGHBOUR_DEVS=detect
 
-## Fail if there is another machine in the network with the same IP
+## Uncomment to skip ARP queries checking for CT IP being used
+## by some other machine on the network
+#SKIP_ARPDETECT=yes
+
+## Comment out to fail CT start if ARP query detects CT IP being used
 ERROR_ON_ARPFAIL="no"
 
 ## Template parameters
