--- a/man/vz.conf.5.in
+++ b/man/vz.conf.5.in
@@ -84,8 +84,15 @@ will be chosen automatically. Any other value restores old (as of vzctl 3.0.19
 or older) behavior, when all the possible interfaces were used.
 .IP \fBERROR_ON_ARPFAIL\fR=\fByes\fR|\fBno\fR
 In case the value of this parameter is set to \fByes\fR, vzctl will fail to
-start a container if there is another host with the same IP in the subnet.
-The value of \fBno\fR makes vzctl to only print the warning.
+start a container if there is another host with the same IP present
+in the network. Any other value makes vzctl to only print the warning
+(which is the default behavior).
+.IP \fBSKIP_ARPDETECT\fR=\fByes\fR|\fBno\fR
+In case the value of this parameter is set to \fByes\fR, vzctl will not
+use ARP queries when starting a container in order to detect if there is
+another host with the same IP present in the network. Note that for each
+IP, vzctl sends ARP query and waits up to 1 second for response.
+Any other value means to do ARP detection.
 
 .SS Defaults for vzctl create
 
