--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -297,23 +297,24 @@ get_ploop_info() {
 
 # Copy top delta with write tracker and CT stop/suspend
 ploop_copy() {
-	local cmd dev delta cat size
+	local cmd dev delta_src delta_dst cat size
 
 	cmd=$*
 	dev=/dev/$PLOOP_DEV
-	delta=$VE_PRIVATE/$TOP_DELTA
+	delta_src=$VE_PRIVATE/$TOP_DELTA
+	delta_dst=$VE_PRIVATE_REMOTE/$TOP_DELTA
 	# Sanity checks
 	test -b $dev || return 1
-	test -f $delta || return 1
+	test -f $delta_src || return 1
 
 	cat=cat
 	# Use nice progress bar with pv if we can
 	if test $verbose -gt 0 && pv -V >/dev/null 2>&1; then
-		size=$(du -b $delta | awk '{print $1}')
+		size=$(du -b $delta_src | awk '{print $1}')
 		test -n "$size" && cat="pv -s $size"
 	fi
 	ploop copy -s $dev -F "$cmd 1>&2" | $cat | \
-		$SSH "root@$host" ploop copy -d $delta
+		$SSH "root@$host" ploop copy -d $delta_dst
 }
 
 print_times() {
