Add set_console dist script
This script is used to configure getty on /dev/tty1 (aka /dev/console)
and /dev/tty2 inside a container. It is run by vzctl start.

This is needed for vzctl console [1|2].

This should also fix bug #2865.

https://bugzilla.openvz.org/2865

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/dists/funtoo.conf
+++ b/etc/dists/funtoo.conf
@@ -24,3 +24,4 @@ SET_DNS=funtoo-set_dns.sh
 SET_USERPASS=set_userpass.sh
 SET_UGID_QUOTA=gentoo-set_ugid_quota.sh
 POST_CREATE=postcreate.sh
+SET_CONSOLE=set_console.sh
