--- a/etc/dists/alpine.conf
+++ b/etc/dists/alpine.conf
@@ -25,3 +25,4 @@ SET_DNS=set_dns.sh
 SET_USERPASS=set_userpass.sh
 SET_UGID_QUOTA=set_ugid_quota.sh
 POST_CREATE=postcreate.sh
+SET_CONSOLE=set_console.sh
