--- a/etc/dists/debian.conf
+++ b/etc/dists/debian.conf
@@ -26,3 +26,4 @@ SET_USERPASS=set_userpass.sh
 SET_UGID_QUOTA=set_ugid_quota.sh
 POST_CREATE=postcreate.sh
 PRE_START=prestart.sh
+SET_CONSOLE=set_console.sh
