--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -90,7 +90,7 @@ _vzctl()
 		--capability --devnodes --devices --applyconfig \
 		--name --ioprio --iolimit --iopslimit \
 		--setmode --meminfo --bootorder --features \
-		--reset_ub --stop-timeout"
+		--reset_ub --stop-timeout --offline-resize"
 	local vzctl_start_opts="--wait --force --skip-fsck"
 	local vzctl_stop_opts="--fast --skip-umount"
 	local vzctl_restart_opts="$vzctl_start_opts $vzctl_stop_opts"
