vzctl snapshot-switch: add --skip-config
Add --skip-config, document in man page and usage,
add to bash-completion.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -40,6 +40,7 @@ vzctl \- perform various operations on an OpenVZ container
 .SY vzctl
 [\fIflags\fR] \fBsnapshot-switch\fR \fICTID\fR
 .OP --skip-resume
+.OP --skip-config
 \fB--id\fR \fIuuid\fR
 .SY vzctl
 [\fIflags\fR] \fBsnapshot-delete\fR \fICTID\fR \fB--id\fR \fIuuid\fR
@@ -909,11 +910,13 @@ Options \fB--name\fR and \fB--description\fR can be used to specify the
 snapshot name and description, respectively. Name is displayed by
 \fBsnapshot-list\fR.
 .TP 4
-\fBsnapshot-switch\fR \fICTID\fR [\fB--skip-resume\fR] \fB--id\fR \fIuuid\fR
+\fBsnapshot-switch\fR \fICTID\fR [\fB--skip-resume\fR] [\fB--skip-config\fR] \fB--id\fR \fIuuid\fR
 Switches the container to a snapshot identified by \fIuuid\fR.
 Note that the current container state and its file system state is lost!
-If given snapshot contains CT memory dump, and option \fB--skip-resume\fR
+If snapshot contains CT memory dump, and option \fB--skip-resume\fR
 is not specified, container is restored, otherwise it is stopped.
+If snapshot contains CT configuration file, and option \fB--skip-config\fR
+is not specified, container configuration file is restored.
 .TP 4
 \fBsnapshot-delete\fR \fICTID\fR \fB--id\fR \fIuuid\fR
 Removes a specified snapshot.
