vzctl(8): rm extra formatting
With .OP, second word is typeset in italics anyway, so no need to
explicitly specify \fI...\fR.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -943,7 +943,7 @@ List of available fields can be obtained using \fB-L\fR option.
 .OP --ostemplate name
 .OP --config name
 .OP --layout \fBsimfs\fR|\fBploop\fR[\fB:\fR{\fBexpanded\fR|\fBplain\fR|\fBraw\fR}]
-.OP --diskspace \fIkbytes\fR
+.OP --diskspace kbytes
 .OP --private path
 .OP --root path
 .OP --ipadd addr
