--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -73,7 +73,8 @@ _vzctl()
 		set start stop restart status quotaon quotaoff quotainit \
 		enter exec exec2 runscript console"
 	local vzctl_create_opts="--ostemplate --config --private --root \
-		--layout --diskspace --ipadd --hostname --name --description"
+		--layout --diskspace --diskinodes --ipadd --hostname \
+		--name --description"
 	local vzctl_convert_opts="--layout"
 	local vzctl_set_opts="--save --onboot --root --private \
 		--userpasswd --disabled --ipadd --ipdel \
