vzmigrate: hide ploop getdev output
No sense in showing it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -678,7 +678,7 @@ fi
 
 if [ "$PLOOP" = "yes" ]; then
 	log 2 "Checking if ploop is supported on destination node"
-	if ! logexec 2 $SSH "root@$host" ploop getdev ; then
+	if ! logexec 2 $SSH "root@$host" "ploop getdev >/dev/null" ; then
 		log 0 "Destination node does not support ploop, can't migrate"
 		undo_lock
 		exit $MIG_ERR_UNSUP_PLOOP
