--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -838,7 +838,26 @@ if [ $RET != 24 ] && [ $RET != 0 ]; then
 	exit $MIG_ERR_COPY
 fi
 
+if [ "$PLOOP" = "yes" ]; then
+	if $SSH root@$host "vzfsync >/dev/null 2>&1"; then
+		log 2 "Calling vzfsync on ploop deltas"
+		TOP_UUID='{5fbaabe3-6958-40ff-92a7-860e329aab41}'
+		if ! logexec 1 $SSH root@$host "vzfsync \
+			--datasync --dontneed \
+			\$(ploop snapshot-list -u $TOP_UUID \
+				-H -s -o fname $DDXML)"
+		then
+			log 1 "Error from vzfsync, but moving on"
+		fi
+	else
+		log 1 "Warning: no vzfsync on $host," \
+			"skipping deltas fsync"
+		log 1 "Please upgrade vzctl on $host"
+	fi
+fi
+
 if [ $online -eq 1 ]; then
+
 	log 1 "Live migrating container..."
 
 	if [ "$PLOOP" != "yes" ]; then
