Introduce NETFILTER option to replace IPTABLES
A way to control which netfilter/iptables modules can be used inside a
container was via --iptables/IPTABLES parameter. Unfortunately, it is
complicated and confusing.

Replace that with a new option --netfilter/NETFILTER which only has
four options:

· disabled
	no iptables allowed

· stateless
	everything but conntracks and NAT is allowed
	(i.e. filter and mangle)

· stateful
	everything but NAT is allowed

· full
	all netfilter functionality

Unlike most of the other options, NETFILTER is not allowed to be set in
global vz.conf file. This is because it can lead to major problems
during container migration from one host to another. Therefore, vzctl
explicitly ignores NETFILTER set in vz.conf and warns about it.

Now, we need to phase out old IPTABLES. This patch

* removes --iptables from bash_completion script
* removes IPTABLES from global vz.conf
* warns (from init.d/vz) if IPTABLES is used in vz.conf

From vzctl point of view, NETFILTER overrides any value of IPTABLES.

Note that future kernel will have iptables autoload functionality,
so no IPTABLES_MODULES will be required either.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -85,7 +85,7 @@ _vzctl()
 		--shmpages --numfile --numflock --numpty --numsiginfo \
 		--dcachesize --numiptent --physpages --swappages \
 		--vm_overcommit --cpuunits --cpulimit --cpus --cpumask \
-		--iptables --netdev_add --netdev_del --netif_add --netif_del \
+		--netfilter --netdev_add --netdev_del --netif_add --netif_del \
 		--diskquota --mount_opts \
 		--diskspace --diskinodes --quotatime --quotaugidlimit \
 		--capability --devnodes --devices --applyconfig \
@@ -102,11 +102,7 @@ _vzctl()
 	local vzctl_snapshot_list_opts="-H --no-header -o --output --id \
 		-L --list --help"
 
-	local iptables_names="iptable_filter iptable_mangle ipt_limit
-		ipt_multiport ipt_tos ipt_TOS ipt_REJECT ipt_TCPMSS
-		ipt_tcpmss ipt_ttl ipt_LOG ipt_length ip_conntrack
-		ip_conntrack_ftp ip_conntrack_irc ipt_conntrack ipt_state
-		ipt_helper iptable_nat ip_nat_ftp ip_nat_irc ipt_REDIRECT"
+	local netfilter_names="disabled stateless stateful full"
 
 	local cap_names="chown dac_override dac_read_search fowner fsetid kill
 		setgid setuid setpcap linux_immutable net_bind_service
@@ -171,8 +167,8 @@ _vzctl()
 			--layout)
 				COMPREPLY=( $( compgen -W "ploop ploop:expanded ploop:plain ploop:raw simfs" -- $cur ) )
 				;;
-			--iptables)
-				COMPREPLY=( $( compgen -W "$iptables_names" -- $cur ) )
+			--netfilter)
+				COMPREPLY=( $( compgen -W "$netfilter_names" -- $cur ) )
 				;;
 			--netdev*)
 				local devs=`ip addr show | awk '/^[0-9]/ && /UP/ && !/venet/ && !/lo/ \
