--- a/etc/vz.conf.in
+++ b/etc/vz.conf.in
@@ -53,10 +53,11 @@ LOCAL_GID=100000
 ## Load vzwdog module
 VZWDOG="no"
 
-## IPv4 iptables kernel modules to be enabled in CTs by default
-IPTABLES="ipt_REJECT ipt_tos ipt_limit ipt_multiport iptable_filter iptable_mangle ipt_TCPMSS ipt_tcpmss ipt_ttl ipt_length"
+## WARNING: IPTABLES parameter is deprecated,
+## use per-сontainer (not global!) NETFILTER instead
+
 ## IPv4 iptables kernel modules to be loaded by init.d/vz script
-IPTABLES_MODULES="$IPTABLES"
+IPTABLES_MODULES="ipt_REJECT ipt_tos ipt_limit ipt_multiport iptable_filter iptable_mangle ipt_TCPMSS ipt_tcpmss ipt_ttl ipt_length"
 
 ## Enable IPv6
 IPV6="yes"
