--- a/man/vz.conf.5.in
+++ b/man/vz.conf.5.in
@@ -46,7 +46,7 @@ on systems which have OpenVZ-specific features compiled into the kernel
 .IP \fBIPTABLES_MODULES\fR="\fImodule\ module\ ...\fR"
 List of iptables kernel modules to be loaded by \fBvz\fR initscript
 before loading OpenVZ modules (which is required for iptables
-to work inside containers). If not set, value of \fBIPTABLES\fR is used.
+to work inside containers).
 .IP \fBVZFASTBOOT\fR=\fByes\fR|\fBno\fR
 If the value of this parameter is set to \fByes\fR, \fBvz\fR initscript called
 with \fBstart\fR argument will start the containers with uncleanly
@@ -132,9 +132,6 @@ Value of this parameter is the \fIdirectory\fR in which all the
 files and directories specific to that container are stored. Value must contain
 literal string \fB$VEID\fR, which will be substituted with the actual
 numeric CT ID.
-.IP \fBIPTABLES\fR="\fImodule\ module\ ...\fR"
-List of iptables modules to be enabled for containers, corresponds
-to \fB--iptables\fR option.
 .IP \fBSTOP_TIMEOUT\fR="\fInumber\fR"
 Time to wait for a container to shut down on \fBvzctl stop\fR,
 before forcibly killing it, in seconds. Hardcoded to 120 if not set.
