--- a/etc/vz.conf.in
+++ b/etc/vz.conf.in
@@ -40,7 +40,7 @@ TEMPLATE=@VZDIR@/template
 ## Defaults for containers
 VE_ROOT=@VZDIR@/root/$VEID
 VE_PRIVATE=@VZDIR@/private/$VEID
-CONFIGFILE="basic" # Use vswap-256m on RHEL6 kernel
+CONFIGFILE="vswap-256m"
 DEF_OSTEMPLATE="centos-6-x86"
 NAMESERVER=inherit # Copy from host system's /etc/resolv.conf
 ## Filesystem layout for new CTs: either simfs or ploop
