--- a/etc/vz.conf.in
+++ b/etc/vz.conf.in
@@ -56,11 +56,8 @@ VZWDOG="no"
 ## WARNING: IPTABLES parameter is deprecated,
 ## use per-сontainer (not global!) NETFILTER instead
 
-## IPv4 iptables kernel modules to be loaded by init.d/vz script
-IPTABLES_MODULES="ipt_REJECT ipt_tos ipt_limit ipt_multiport iptable_filter iptable_mangle ipt_TCPMSS ipt_tcpmss ipt_ttl ipt_length"
+## iptables kernel modules to be loaded by init.d/vz script
+IPTABLES_MODULES="ipt_REJECT ipt_tos ipt_limit ipt_multiport iptable_filter iptable_mangle ipt_TCPMSS ipt_tcpmss ipt_ttl ipt_length ip6_tables ip6table_filter ip6table_mangle ip6t_REJECT"
 
 ## Enable IPv6
 IPV6="yes"
-
-## IPv6 ip6tables kernel modules
-IP6TABLES="ip6_tables ip6table_filter ip6table_mangle ip6t_REJECT"
