vzmigrate: don't use ploop snapshot-list -s
Option -s of ploop snapshot-list only appeared in ploop 1.11,
and we can't expect it to be available (nor it makes sense to
depend on it for this option).

So, just drop -s option and filter out the top delta filename
using sed.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -845,7 +845,7 @@ if [ "$PLOOP" = "yes" ]; then
 		if ! logexec 1 $SSH root@$host "vzfsync \
 			--datasync --dontneed \
 			\$(ploop snapshot-list -u $TOP_UUID \
-				-H -s -o fname $DDXML)"
+				-H -o fname $DDXML | sed 1d)"
 		then
 			log 1 "Error from vzfsync, but moving on"
 		fi
