vzctl(8): fix a typo
Introduced in commit 3fc3f7a.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>
(cherry picked from commit a1e5c72b9499d156963190111bffaf539c3be973)

--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -101,7 +101,7 @@ some output.
 Increments logging level up from the default. Can be used multiple times.
 Default value is set to the value of \fBVERBOSE\fR parameter in the global
 configuration file \fBvz.conf\fR(5), or to \fB0\fR if not set by
-\fBViERBOSE\fR parameter.
+\fBVERBOSE\fR parameter.
 
 .SS Setting container parameters
 .SY set
