--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -84,7 +84,7 @@ _vzctl()
 		--dgramrcvbuf --oomguarpages --lockedpages --privvmpages \
 		--shmpages --numfile --numflock --numpty --numsiginfo \
 		--dcachesize --numiptent --physpages --swappages \
-		--vm_overcommit --cpuunits --cpulimit --cpus --cpumask \
+		--vm_overcommit --cpuunits --cpulimit --cpus --cpumask --nodemask \
 		--netfilter --netdev_add --netdev_del --netif_add --netif_del \
 		--diskquota --mount_opts \
 		--diskspace --diskinodes --quotatime --quotaugidlimit \
