vzmigrate: fix for --snapshot
Apparently, option -s|--snapshot (added in commit 85d5266) was not
working properly (or at all). The problem is top_delta (the one
to be excluded from rsync and migrated using ploop copy) was determined
before the snapshot is done.

Fix by moving get_ploop_info() call to right after vzctl snapshot.
The only downside is if ploop proc is weird and get_ploop_info() fails,
there is more to rollback. As it shouldn't happen regularly, we don't
care much about longer rollback.

https://bugzilla.openvz.org/2907

Reported-by: Pavel Odintsov <pavel.odintsov@gmail.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -683,16 +683,6 @@ if [ "$PLOOP" = "yes" ]; then
 		undo_lock
 		exit $MIG_ERR_UNSUP_PLOOP
 	fi
-
-	if [ "$state" = "running" ]; then
-		# Online ploop migration: exclude top delta
-		if ! get_ploop_info; then
-			log 0 "Can't get ploop information"
-			undo_lock
-			exit $MIG_ERR_COPY
-		fi
-		RSYNC1_OPTIONS="--exclude $TOP_DELTA --delete-excluded"
-	fi
 else
 	# non-ploop case: can use sparse rsync, can't do compact/snapshot
 	RSYNC1_OPTIONS="--sparse"
@@ -826,6 +816,16 @@ if [ "$snapshot" -eq 1 ]; then
 		log 0 "Failed to snapshot a container"
 		undo_root
 	fi
+fi
+
+if [ "$PLOOP" = "yes" -a "$state" = "running" ]; then
+	# Online ploop migration: exclude top delta
+	if ! get_ploop_info; then
+		log 0 "Can't get ploop information"
+		undo_root
+		exit $MIG_ERR_COPY
+	fi
+	RSYNC1_OPTIONS="--exclude $TOP_DELTA --delete-excluded"
 fi
 
 log 1 "Syncing private"
