--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -278,6 +278,9 @@ start_ves()
 	local velist
 	local msg
 	local need_restart
+	local iter=0
+	local header
+	local pid pids
 
 	need_restart=""
 	# CTs that were running before a reboot
@@ -292,9 +295,9 @@ start_ves()
 	# Then sort by bootorder
 	test -n "$velist" && velist=$(vzlist -aH -octid -s-bootorder $velist)
 	sysctl -q -w net.ipv4.route.src_check=0
+	get_parallel
 	for veid in $velist; do
 		[ "${veid}" = "0" ] && continue
-		__echo "Starting CT ${veid}: "
 		if [ "x${VZFASTBOOT}" = "xyes" -a "x${DISK_QUOTA}" = "xyes" ];
 		then
 			$VZQUOTA stat ${veid} >/dev/null 2>&1
@@ -305,10 +308,42 @@ start_ves()
 				fi
 			fi
 		fi
+		if [ -z "${header}" ]; then
+			__echo "Starting CT:"
+			header=1
+		fi
+		__echo " ${veid}"
+
 		rm -f $VZREBOOTDIR/$veid
-		msg=`$VZCTL start ${veid} --skip-fsck 2>&1`
-		print_result "$msg"
+		$VZCTL start ${veid} >/dev/null 2>&1 &
+		pid=$!
+		eval VE_${pid}=${veid}
+		pids="$pids $pid"
+		let iter++
+		if [ ${iter} -ge ${PARALLEL} ]; then
+			echo
+			for pid in ${pids}; do
+				veid=`eval echo \\$VE_${pid}`
+				unset VE_${pid}
+				__echo "Container ${veid} start: "
+				wait ${pid}
+				print_result
+			done
+			pids=
+			iter=0
+			header=
+		fi
 	done
+
+	[ -n "${pids}" ] && echo
+	for pid in ${pids}; do
+		veid=`eval echo \\$VE_${pid}`
+		unset VE_${pid}
+		__echo "Container ${veid} start: "
+		wait ${pid}
+		print_result
+	done
+
 	for veid in ${need_restart}; do
 		__echo "Stopping CT ${veid}: "
 		$VZCTL stop ${veid} 2>&1 >/dev/null 2>&1
