init.d/vz, vz.conf: use/expose VE_PARALLEL
Parallelism of VE start/stop in vz initscript was calculated
as number of CPUs * 4. It makes sense to give a user an ability
to change the number, so let's name it VE_PARALLEL and put to
global vz.conf file. If unset, it is still autocalculated the same way.

vz.conf(5) man page modified accordingly

Parameter name added into "well known" ones in src/lib/config.c
to avoid a warning from vzctl.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -181,8 +181,8 @@ start_ve() {
 
 get_parallel()
 {
-	[ -n "${PARALLEL}" ] && return
-	PARALLEL=`awk '
+	[ -n "${VE_PARALLEL}" -a "${VE_PARALLEL" != "0" ] && return
+	VE_PARALLEL=`awk '
 BEGIN { num=0; }
 $1 == "processor" { num++; }
 END { print num * 4; }' /proc/cpuinfo`
@@ -229,7 +229,7 @@ stop_ve() {
 				${VZCTL} --skiplock $stage ${veid} >/dev/null 2>&1 &
 				pids="${pids} $!"
 				let iter++
-				if [ ${iter} -gt ${PARALLEL} ]; then
+				if [ ${iter} -ge ${VE_PARALLEL} ]; then
 					for pid in ${pids}; do
 						wait ${pid}
 					done
