vzmigrate: don't specify cipher
As it is nicely put by the bug reporter:

	in vzmigrate:

	SSH_OPTIONS="-c blowfish -o BatchMode=yes"

	the "-c blowfish" is wrong here. On my system (and probably
	at least on most modern intel systems) aes-cbc is mush faster
	than blowfish because it's cpu  accelerated.

	But more importantly this configuration is done in
	/etc/ssh/ssh_config in a line like:

	    Ciphers aes256-cbc,aes128-cbc,aes128-ctr,aes192-ctr,aes256-ctr,arcfour256,arcfour128,3des-cbc

	where you can set your preferred cipher system-wide.
	So all "-c blowfish" does is "breaking" existing and
	working configurations.

Couldn't disagree. Let's remove it from the script.

https://bugzilla.openvz.org/2848

Reported-by: Florian Bantner <f.bantner@axon-e.de>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -20,8 +20,7 @@
 
 
 ACT_SCRIPTS_SFX="start stop mount umount premount postumount"
-# blowfish is a fast block cipher, much faster then 3des
-SSH_OPTIONS="-c blowfish -o BatchMode=yes"
+SSH_OPTIONS="-o BatchMode=yes"
 SCP_OPTIONS=$SSH_OPTIONS
 RSYNC_OPTIONS="-aHAX --delete --numeric-ids"
 VZCTL=vzctl
